--- a/frontend/src/app/components/view/button/button.component.html
+++ b/frontend/src/app/components/view/button/button.component.html
@@ -2,6 +2,6 @@
         [ngStyle]="{'opacity': buttonDisable ? '0.3' : ''}"
         [disabled]="buttonDisable"
         type="{{buttonType}}"
-        (click)="buttonAction.emit()">
+        (click)="btnClick">
     {{ buttonText }}
 </button>
