--- a/backend/src/templates/create_user.html
+++ b/backend/src/templates/create_user.html
@@ -15,7 +15,7 @@
         <input type="text" id="sobrenome" name="sobrenome" required><br><br>
         
         <label for="CPF">CPF:</label>
-        <input type="number" id="CPF" name="CPF" required><br><br>
+        <input type="text" id="CPF" name="CPF" required><br><br>
 
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="email" required><br><br>
