--- a/frontend/src/app/components/categories/categories-manager/categories-manager.component.html
+++ b/frontend/src/app/components/categories/categories-manager/categories-manager.component.html
@@ -1,3 +1,3 @@
-<button id="addButon" (click)="onAddButtonClick()">Adicionar Categoria</button>
-<button id="listButton" (click)="onListButtonClick()">Ver Categortias</button>
+<app-button id="addButon" [textButton]="'Adicionar'" (click)="onAddButtonClick()"></app-button>
+<app-button id="listButton" [textButton]="'Visualizar'" (click)="onListButtonClick()"></app-button>
 
