alteração no comportamento da navbar e das paginas quando não tem usuario logadoo

--- a/frontend/src/app/components/pages/login/login.component.css
+++ b/frontend/src/app/components/pages/login/login.component.css
@@ -3,14 +3,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10%;
+  margin-top: 4rem;
 }
 
 .login-container {
-  margin-left: 20%;
+  margin-left: 10rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.form-buttons{
+  margin-top: 0.6em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .container-right {
