--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -39,7 +39,7 @@
       </div>
       <div class="form-group form-buttons">
         <app-button class="btn btn-primary" [textButton]="'Login'" (click)="doLogin()">Login</app-button>
-        <app-button class="btn btn-primary" [textButton]="'cancel'" (click)="clear()">Login</app-button>
+        <app-button class="btn btn-primary" [textButton]="'Limpar'" (click)="clear()">Login</app-button>
       </div>
     </form>
   </div>
