--- a/frontend/src/app/features/users/pages/cadastro/cadastro.component.html
+++ b/frontend/src/app/features/users/pages/cadastro/cadastro.component.html
@@ -88,7 +88,7 @@
                     </span>
                 </div>
             </div>
-            <button class="btn waves-effect waves-light offset-s2" type="submit" value="enviar">Enviar
+            <button class="btn waves-effect waves-light offset-s2" type="submit" value="enviar" id="registrar">Enviar
             </button>
         </form>
     </div>
