--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="login-container">
-    <form [formGroup]="form">
+    <form [formGroup]="form" (keydown)="enterSubmit($event)">
       <div class="form-group">
         <label for="username">Username</label><br>
         <input
@@ -39,7 +39,6 @@
       </div>
       <div class="form-group form-buttons">
         <app-button class="btn btn-primary" [textButton]="'Login'" (click)="doLogin()">Login</app-button>
-        <app-button class="btn btn-primary" [textButton]="'Limpar'" (click)="clear()">Login</app-button>
       </div>
     </form>
   </div>
