Login funcionando, rotas respondendo

--- a/frontend/src/app/components/pages/categories/create-categories/create-categories.component.html
+++ b/frontend/src/app/components/pages/categories/create-categories/create-categories.component.html
@@ -10,12 +10,12 @@
     </div>
     <div class="form-group">
       <label for="keywords">Keywords</label><br>
-      <input type="text" id="keywords" name="keywords" formControlName="keywords">
+      <input type="text" id="keywords" name="keywords" formControlName="keywords" >
     </div>
     <div class="form-group">
       <!--substituir pelo upload de uma imagem -->
       <label for="image">imagem</label><br>
-      <input type="url" id="image" name="image" formControlName="image">
+      <input type="file" id="image" name="image" formControlName="image">
     </div>
     <div>
       <button class="btn btn-primary" (click)="save()">Adicionar</button>
