--- a/frontend/src/app/features/users/pages/cadastro/cadastro.component.html
+++ b/frontend/src/app/features/users/pages/cadastro/cadastro.component.html
@@ -17,6 +17,7 @@
                     <input placeholder="Nome*" id="nome" type="text" class="form-control validate" name="nome" [(ngModel)]="user.nome" #nome="ngModel" required>
                     <span
                       class="text-danger"
+                      id="campo_obrigatorio"
                       *ngIf="(nome.touched || registerForm.submitted) && nome.errors?.['required']"
                     >
                       Campo obrigatório
@@ -27,6 +28,7 @@
                     <input placeholder="Sobrenome*" id="sobrenome" type="text" class="form-control" name="sobrenome" [(ngModel)]="user.sobrenome" #sobrenome="ngModel" required>
                     <span
                       class="text-danger"
+                      id="campo_obrigatorio"
                       *ngIf="(sobrenome.touched || registerForm.submitted) && sobrenome.errors?.['required']"
                     >
                       Campo obrigatório
@@ -39,6 +41,7 @@
                     <input placeholder="CPF*" id="cpf" type="text" class="form-control" name="cpf" [(ngModel)]="user.cpf" #cpf="ngModel" required>
                     <span
                       class="text-danger"
+                      id="campo_obrigatorio"
                       *ngIf="(cpf.touched || registerForm.submitted) && cpf.errors?.['required']"
                     >
                       Campo obrigatório
@@ -61,6 +64,7 @@
                     <input placeholder="Email*" id="email" type="email" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" required>
                     <span
                       class="text-danger"
+                      id="campo_obrigatorio"
                       *ngIf="(email.touched || registerForm.submitted) && email.errors?.['required']"
                     >
                       Campo obrigatório
@@ -78,11 +82,13 @@
                     <input placeholder="Senha*" id="senha" type="password" class="form-control" name="senha" [(ngModel)]="user.senha" #senha="ngModel" required>
                     <span
                         class="text-danger"
+                        id="campo_obrigatorio"
                         *ngIf="(senha.touched || registerForm.submitted) && senha.errors?.['required']">
                         Campo obrigatório
                     </span>
                     <span
                         class="text-danger"
+                        id="senha_errada"
                         *ngIf="registerForm.submitted && patternValidator(user.senha)">
                         A senha deve ter pelo menos 6 caracteres, 1 caractere especial, 1 letra maiúscula, 1 letra minúscula e 1 dígito.
                     </span>
