[GERAL] Tornando nav responsiva

--- a/frontend/src/app/features/users/pages/cadastro/cadastro.component.html
+++ b/frontend/src/app/features/users/pages/cadastro/cadastro.component.html
@@ -10,7 +10,7 @@
 <body>
     <h2 class="brand-logo center" style="font-weight: 600;" >Cadastro</h2>
     <div class="row">
-        <form class="col s10 offset-s2" #registerForm="ngForm" (ngSubmit)="registerForm.form.valid && onSubmit()" novalidate>
+        <form class="col s10" #registerForm="ngForm" (ngSubmit)="registerForm.form.valid && onSubmit()" novalidate>
             <div class="row">
                 <div class="input-field col s5 form-group">
                     <label for="nome"></label>
