--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -9,8 +9,9 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-          <a routerLink="" class="brand-logo">eCapibaribe</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <a routerLink="" class="brand-logo left">eCapibaribe</a>
+          <ul id="nav-mobile" class="right">
+            <li><a routerLink="/users/login">Login</a></li>
             <li><a routerLink="/users/register">Cadastro</a></li>
           </ul>
         </div>
