--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -12,6 +12,8 @@
           <a routerLink="" class="brand-logo">eCapibaribe</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a routerLink="/users/register">Cadastro</a></li>
+            <li><a routerLink="/items/inventario">Inventario</a></li>
+            <li><a routerLink="/items/cadastro">Registar Item</a></li>
           </ul>
         </div>
       </nav>
