refactor: mudança de nomes na pagina de registar item

--- a/frontend/src/app/features/items/pages/registrar/registrar.component.html
+++ b/frontend/src/app/features/items/pages/registrar/registrar.component.html
@@ -1,4 +1,4 @@
-<h2 class="brand-logo center" style="font-weight: 0;" >Cadastre o Item</h2>
+<h2 class="brand-logo center" style="font-weight: 0;" >Registrar Item</h2>
 <div class="row">
     <form class="col s10 offset-s2" #registerForm="ngForm" (ngSubmit)="registerForm.form.valid && onSubmit()" novalidate>
         <div class="row">
