--- a/frontend/src/app/components/pages/categories/create-categories/create-categories.component.html
+++ b/frontend/src/app/components/pages/categories/create-categories/create-categories.component.html
@@ -1,5 +1,5 @@
 <div>
-  <form [formGroup]="form">
+  <form class="form" [formGroup]="form">
     <div class="form-group">
       <label for="name">Nome da Categoria</label><br>
       <input type="text" id="name" name="name" formControlName="name">
@@ -12,14 +12,9 @@
       <label for="keywords">Keywords</label><br>
       <input type="text" id="keywords" name="keywords" formControlName="keywords" >
     </div>
-    <div class="form-group">
-      <!--substituir pelo upload de uma imagem -->
-      <label for="image">imagem</label><br>
-      <input type="file" id="image" name="image" formControlName="image">
-    </div>
-    <div>
-      <button class="btn btn-primary" (click)="save()">Adicionar</button>
-      <button class="btn btn-primary" (click)="cancel()">Cancelar</button>
+    <div class="form-buttons">
+      <app-button class="btn btn-primary" [textButton]="'Adicionar'" (click)="save()"></app-button>
+      <app-button class="btn btn-cancel" [textButton]="'Cancelar'" (click)="cancel()"></app-button>
     </div>
   </form>
 </div>
