feat: add tests files on frontend

--- a/frontend/src/app/features/items/pages/editar/editar.component.html
+++ b/frontend/src/app/features/items/pages/editar/editar.component.html
@@ -115,7 +115,7 @@
                 <input placeholder="palavrachave" id="palavrachave" type="text" class="form-control" name="palavrachave" [(ngModel)]="item.palavrachave">
             </div>
         </div>
-        <button class="btn waves-effect waves-light offset-s2" type="submit" value="enviar">Enviar
+        <button class="btn waves-effect waves-light offset-s2" id="Editar" type="submit" value="enviar">Editar
         </button>
     </form>
 </div>
