--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <div class="nav-wrapper">
           <a routerLink="" class="brand-logo left">eCapibaribe</a>
           <ul id="nav-mobile" class="right">
-            <li><a routerLink="login">Login</a></li>
+            <li><a *ngIf="!isLogedIn" routerLink="login">Login</a></li>
             <li><a *ngIf="!isLogedIn" routerLink="/users/register">Cadastro</a></li>
             <li><a *ngIf="isLogedIn" routerLink="/items/inventario">Inventario</a></li>
             <li><a *ngIf="isLogedIn" routerLink="/items/cadastro">Registar Item</a></li>
